--- a/jawaddev/home/templates/home/book_list.html
+++ b/jawaddev/home/templates/home/book_list.html
@@ -8,7 +8,7 @@
         <h2 class="heading text-center">Reading List</h2>
         <div class="project-intro text-center">
             <p class="mb-0 lead">
-                Below are the books that I have studied in the domain of programming and web development that I enjoyed the most and derived the most benefit. I hope that you enjoy them as much as I did.
+                Below are the books that I have studied in the domain of my life that I enjoyed the most and derived the most benefit. I hope that you enjoy them as much as I did.
             </p>
         </div>
     </div>
@@ -16,7 +16,7 @@
 <!-- Last Updated Date -->
 <div class="container mt-2 text-end pe-3">
     <p class="text-small text-muted">
-        <strong>Last Updated:</strong> 14-Nov-23
+        <strong>Last Updated:</strong> None
     </p>
 </div>
 <section class="project py-3 ps-3">
