--- a/jawaddev/user/templates/user/login.html
+++ b/jawaddev/user/templates/user/login.html
@@ -17,7 +17,7 @@
                 </button>
             </div>
             <div class="border-top pt-2">
-                <small class="text-muted">Need an account? <a href="{% url "accounts:register" %}" class="theme-link">Sign up</a></small>
+                <small class="text-muted">Need an account? <a href="{% url "user:register" %}" class="theme-link">Sign up</a></small>
             </div>
         </form>
     </div>
