--- a/jawaddev/core/static/core/css/style.css
+++ b/jawaddev/core/static/core/css/style.css
@@ -569,6 +569,28 @@ body.dark-mode .cv-section-heading {
     border-left-color: #7532FA;
 }
 
+/* Portfolio */
+
+.filters {
+    list-style: none;
+    font-size: 0.875rem;
+}
+
+.filters .type .active {
+    border-top: 2px solid #1762dd;
+    color: #1762dd;
+    font-weight: bold;
+}
+
+.filters .type {
+    display: inline-block;
+    padding: 0.275rem 0.25rem;
+    cursor: pointer;
+    margin-right: 2rem;
+    color: #8f8f8f;
+    font-weight: bold;
+}
+
 /* Dark Mode */
 
 body.dark-mode {
