--- a/jawaddev/user/templates/user/register.html
+++ b/jawaddev/user/templates/user/register.html
@@ -26,7 +26,7 @@
                 </button>
             </div>
             <div class="border-top pt-2">
-                <small class="text-muted">Already have an account? <a href="{% url "accounts:login" %}" class="theme-link">Sign In</a></small>
+                <small class="text-muted">Already have an account? <a href="{% url "user:login" %}" class="theme-link">Sign In</a></small>
             </div>
         </form>
     </div>
