--- a/jawaddev/core/static/core/css/home.css
+++ b/jawaddev/core/static/core/css/home.css
@@ -49,7 +49,7 @@
 .project-card {
     border-radius: 0;
     background: #fafafa;
-    border: 1px solid rgba(0, 0, 0, 0.025);
+    border: none;
     position: relative;
     height: 100%;
     transition: .5s;
