--- a/jawaddev/portfolio/templates/portfolio/project.html
+++ b/jawaddev/portfolio/templates/portfolio/project.html
@@ -18,7 +18,7 @@
 <section class="projects-section px-3 py-5 p-md-5">
     <div class="container">
         <div class="text-center">
-            <ul id="filters" class="filters mb-5 mx-auto ps-0 list-unstyled">
+            <ul id="filters" class="filters mb-5 mx-auto ps-0">
                 <li class="type mb-3 mb-lg-0 active" data-filter="*">All</li>
                 <li class="type mb-3 mb-lg-0" data-filter=".djangoapp">Django</li>
                 <li class="type mb-3 mb-lg-0" data-filter=".pythonapp">Python</li>
