--- a/jawaddev/core/templates/core/components/navbar-middle.html
+++ b/jawaddev/core/templates/core/components/navbar-middle.html
@@ -5,7 +5,7 @@
       <a href="{% url "home" %}" class="nav-link"><i class="fa fa-house mx-2"></i>Home</a>
     </li>
     <li class="nav-item">
-      <a href="{% url "portfolio:project" %}" class="nav-link"><i class="fa fa-briefcase mx-2"></i>Portfolio Projects</a>
+      <a href="{% url "portfolio:projects" %}" class="nav-link"><i class="fa fa-briefcase mx-2"></i>Portfolio Projects</a>
     </li>
     <li class="nav-item">
       <a href="{% url "cv" %}" class="nav-link"><i class="fa fa-align-left mx-2"></i>CV</a>
