project-list-updated | Image-Resize-Signal

--- a/jawaddev/home/templates/home/components/home-middle.html
+++ b/jawaddev/home/templates/home/components/home-middle.html
@@ -19,9 +19,9 @@
                 </div>
               </div>
               <div class="link-mask">
-                <a class="link-mask-link" href="/blog/"></a>
-                <div class="link-mask-text text-end">
-                  <a class="btn btn-secondary" href="/blog/">
+                <a class="link-mask-link" href="#"></a>
+                <div class="link-mask-text text-center">
+                  <a class="btn btn-secondary" href="#">
                     <i class="fas fa-arrow-circle-right me-2" aria-hidden="true"></i>{{project.btn_title}}
                   </a>
                 </div>
