--- a/jawaddev/portfolio/templates/portfolio/project_list.html
+++ b/jawaddev/portfolio/templates/portfolio/project_list.html
@@ -25,8 +25,12 @@
         <div class="text-center">
             <ul id="filters" class="filters mb-5 mx-auto ps-0">
                 <li class="type mb-3 mb-lg-0 active" data-filter="*">All</li>
-                    <li class="type mb-3 mb-lg-0" data-filter=".django">Django</li>
-                    <li class="type mb-3 mb-lg-0" data-filter=".python">Python</li>
+                    <li class="type mb-3 mb-lg-0" data-filter=".django">
+                        <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="currentColor" d="M7.533 12.249c-.011 1.985 1.445 3.168 3.768 2.63V9.618c-2.352-.716-3.758.733-3.768 2.631m3.839-10.238h3.199v15.143c-3.066.501-6.004.819-8.104-.355c-2.705-1.513-2.923-6.319-.782-8.46c1.085-1.085 3.271-1.85 5.616-1.351V2.225c-.006-.101-.012-.202.071-.214m8.389 3.342h-3.199V2.011h3.199v3.342z"/><path fill="currentColor" d="M19.761 7.044c-.003 2.356-.003 4.048-.003 6.911c-.136 2.813-.104 5.052-1.135 6.398c-.203.266-.634.652-.995.924c-.303.228-.881.691-1.208.711c-.331.021-1.18-.459-1.564-.64c-.505-.237-.971-.553-1.493-.71c1.218-.754 2.372-1.32 2.844-2.844c.41-1.326.355-3.247.355-5.119c0-1.849.009-3.998.009-5.63l3.19-.001z"/></svg>
+                    Django</li>
+                    <li class="type mb-3 mb-lg-0" data-filter=".python">
+                        <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><g fill="none"><g fill="currentColor" clip-path="url(#akarIconsPythonFill0)"><path d="M11.914 0C5.82 0 6.2 2.656 6.2 2.656l.007 2.752h5.814v.826H3.9S0 5.789 0 11.969c0 6.18 3.403 5.96 3.403 5.96h2.03v-2.867s-.109-3.42 3.35-3.42h5.766s3.24.052 3.24-3.148V3.202S18.28 0 11.913 0ZM8.708 1.85c.578 0 1.046.47 1.046 1.052c0 .581-.468 1.051-1.046 1.051c-.579 0-1.046-.47-1.046-1.051c0-.582.467-1.052 1.046-1.052Z"/><path d="M12.087 24c6.092 0 5.712-2.656 5.712-2.656l-.007-2.752h-5.814v-.826h8.123s3.9.445 3.9-5.735c0-6.18-3.404-5.96-3.404-5.96h-2.03v2.867s.109 3.42-3.35 3.42H9.452s-3.24-.052-3.24 3.148v5.292S5.72 24 12.087 24Zm3.206-1.85c-.579 0-1.046-.47-1.046-1.052c0-.581.467-1.051 1.046-1.051c.578 0 1.046.47 1.046 1.051c0 .582-.468 1.052-1.046 1.052Z"/></g><defs><clipPath id="akarIconsPythonFill0"><path fill="#fff" d="M0 0h24v24H0z"/></clipPath></defs></g></svg>
+                    Python</li>
             </ul>
         </div>
         {% if projects %}
@@ -46,9 +50,9 @@
                             </div>
                         </div>
                         <div class="link-mask">
-                            <a class="link-mask-link" href="/blog/"></a>
-                            <div class="link-mask-text text-end">
-                            <a class="btn btn-secondary" href="/blog/">
+                            <a class="link-mask-link" href="#"></a>
+                            <div class="link-mask-text text-center">
+                            <a class="btn btn-secondary" href="#">
                                 <i class="fas fa-arrow-circle-right me-2" aria-hidden="true"></i>{{project.btn_title}}
                             </a>
                             </div>
