--- a/jawaddev/core/static/core/css/home.css
+++ b/jawaddev/core/static/core/css/home.css
@@ -52,11 +52,15 @@
     border: none;
     position: relative;
     height: 100%;
-    transition: .5s;
 }
 
-.project-card:hover {
-    transform: scale(1.1);
+.project-card:hover .link-mask {
+    visibility: visible;
+    background: rgba(117, 50, 250, 0.4)
+}
+
+.project-card:hover .link-mask-text {
+    display: block;
 }
 
 .project-card .card-img-holder {
@@ -88,6 +92,12 @@
     transition: all 0.4s ease-in-out;
 }
 
+@media (prefers-reduced-motion: reduce) {
+    .project-card .link-mask {
+        transition: none;
+    }
+}
+
 .project-card .link-mask .link-mask-link {
     position: absolute;
     left: 0;
@@ -103,7 +113,6 @@
     top: 0;
     width: 100%;
     height: 100%;
-    text-align: center;
     vertical-align: middle;
     color: #fff;
     display: none;
@@ -113,6 +122,8 @@
     top: 50%;
     margin-top: -20px;
     position: relative;
+    background: rgba(0, 0, 0, 0.9);
+    border: none;
 }
 
 .skills-section .item:hover {
@@ -165,4 +176,12 @@ body.dark-mode .project-card .card-text {
 
 body.dark-mode .text-muted {
     color: #73787F
+}
+
+body.dark-mode .project-card .link-mask:hover {
+    background: rgba(0, 0, 0, 0.4);
+}
+
+body.dark-mode .link-mask-text .btn {
+    background: rgba(117, 50, 250, 0.85)
 }
