Blog - Initializing DetailView

--- a/jawaddev/core/templates/core/base.html
+++ b/jawaddev/core/templates/core/base.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of M. Jawad Bacha" />
     <meta name="author" content="M. Jawad Bacha" />
+
+    <!-- Set the favicon -->
+    <link rel="icon" type="image/png" href="{% static 'core/images/favicon.ico' %}">
+
     <title>{% block title %}JawadDev{% endblock title %}</title>
 
     <!-- Bootstrap core CSS -->
