--- a/jawaddev/home/templates/home/cv.html
+++ b/jawaddev/home/templates/home/cv.html
@@ -5,11 +5,11 @@
 {% block content %}
 <div class="container px-3 px-lg-5">
     <div class="text-center pt-4">
-        <ul id="filters" class="filters cv list-unstyled">
-            <li class="type" data-filter=".chronological">
+        <ul id="filters" class="filters list-unstyled">
+            <li class="cv-type" data-filter=".chronological">
                 <i class="fa fa-regular fa-clock me-2" aria-hidden="true"></i>Chronological
             </li>
-            <li class="type active" data-filter=".functional">
+            <li class="cv-type active" data-filter=".functional">
                 <i class="fa fa-solid fa-laptop me-2" aria-hidden="true"></i>Functional
             </li>
         </ul>
