--- a/jawaddev/core/static/core/css/style.css
+++ b/jawaddev/core/static/core/css/style.css
@@ -472,12 +472,12 @@ h6 {
     font-size: 0.875rem;
 }
 
-.cv .type.active {
+.cv-type.active {
     background: #7532FA;
     color: #fff;
 }
 
-.cv .type {
+.cv-type {
     display: inline-block;
     padding: 0.275rem 0.875rem;
     border-top: none;
@@ -485,7 +485,7 @@ h6 {
     cursor: pointer;
 }
 
-.filters .type {
+.cv-type {
     margin-right: 2rem;
     color: #8f8f8f;
     font-weight: bold;
