--- a/jawaddev/blog/static/blog/css/blog.css
+++ b/jawaddev/blog/static/blog/css/blog.css
@@ -1,5 +1,6 @@
-body.dark-mode table {
-    --bs-table-bg: #0e141c;
+.search-form {
+    position: relative;
+    width: 100%;
 }
 
 .article-img {
@@ -11,4 +12,10 @@ body.dark-mode table {
 .blog-post .blog-post-body p, .blog-post .blog-post-body li {
     font-size: 1.125rem;
     line-height: 1.6;
+}
+
+/* Dark Mode */
+
+body.dark-mode table {
+    --bs-table-bg: #0e141c;
 }
