--- a/jawaddev/blog/templates/blog/post_list.html
+++ b/jawaddev/blog/templates/blog/post_list.html
@@ -1,54 +1,67 @@
 {% extends 'core/base.html' %}
+{% load static %}
 {% load humanize %}
 
 {% block title %}Blog Home | {{block.super}}{% endblock title %}
 
+{% block links %}
+<link rel="stylesheet" href="{% static 'core/css/home.css' %}">
+<link rel="stylesheet" href="{% static 'blog/css/blog.css' %}">
+{% endblock links %}
+
 {% block content %}
-
-<form method="GET" action="{% url 'blog:post_list' %}">
-    {{ form.as_p }}
-    <button type="btn btn-primary submit">Search</button>
-</form>
-
-{% if query %}
-    <h3>Search results for "{{query}}"</h3>
-{% endif %}
-
-<div class="row">
-    {% if posts %}
-        {% for post in posts %}
-            <div class="col-md-4 mb-5">
-                <div class="card blog-post-card">
-                    <img class="card-img-top img-fluid"
-                        src={{post.thumbnail.url}}>
-                    <div class="card-body">
-                        <h6 class="card-title">
-                            <a href="{% url 'blog:post_detail' slug=post.slug %}" class="theme-link">
-                                {{post.title}}
-                            </a>
-                        </h6>
-                        <small class="text-muted">
-                            <ul class="no-bullets">
-                                <li><strong>Published: </strong>{{post.published_date|date:"D d-M-y"}}</li>
-                                <li><strong>Updated: </strong>{{post.updated_date|date:"D d-M-y"}}</li>
-                            </ul>
-                        </small>
-                        <small class="text-muted">
-                            <span class="time">
-                                {{ post.word_count|intcomma }} words
-                            </span>
-                            |
-                            <span class="time">
-                                {{post.reading_time}} min read
-                            </span>
-                        </small>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
-        {% else %}
-        <p>No Blogs</p>
-    {% endif %}
+<div class="cta-section theme-bg-light py-5">
+    <div class="container col-8 text-center">
+        <form method="GET" class="search-form justify-content-center pt-3" action="{% url 'blog:post_list' %}">
+            {{ form }}
+        </form>
+    </div>
 </div>
-
+<h6 class="text-center mt-5">
+    {% if query %}
+    Search results for "{{query}}"
+    {% else %}
+    1 post covering 1 category
+    {% endif %}
+</h6>
+<div class="blog-list px-3 py-5 p-md-5">
+    <div class="container">
+        <div class="row">
+            {% if posts %}
+                {% for post in posts %}
+                    <div class="col-md-4 mb-5">
+                        <div class="card blog-post-card">
+                            <img class="card-img-top img-fluid"
+                                src={{post.thumbnail.url}}>
+                            <div class="card-body">
+                                <h6 class="card-title">
+                                    <a href="{% url 'blog:post_detail' slug=post.slug %}" class="theme-link">
+                                        {{post.title}}
+                                    </a>
+                                </h6>
+                                <small class="text-muted">
+                                    <ul class="no-bullets">
+                                        <li><strong>Published: </strong>{{post.published_date|date:"D d-M-y"}}</li>
+                                        <li><strong>Updated: </strong>{{post.updated_date|date:"D d-M-y"}}</li>
+                                    </ul>
+                                </small>
+                                <small class="text-muted">
+                                    <span class="time">
+                                        {{ post.word_count|intcomma }} words
+                                    </span>
+                                    |
+                                    <span class="time">
+                                        {{post.reading_time}} min read
+                                    </span>
+                                </small>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+                {% else %}
+                <p>No Blogs Found</p>
+            {% endif %}
+        </div>
+    </div>
+</div>
 {% endblock content %}
