--- a/jawaddev/blog/static/blog/css/blog.css
+++ b/jawaddev/blog/static/blog/css/blog.css
@@ -19,3 +19,8 @@
 body.dark-mode table {
     --bs-table-bg: #0e141c;
 }
+
+body.dark-mode .blog-post-card {
+    background: #151e29;
+    border: none;
+}
