--- a/jawaddev/blog/templates/blog/post_list.html
+++ b/jawaddev/blog/templates/blog/post_list.html
@@ -12,7 +12,7 @@
 {% block content %}
 <div class="cta-section theme-bg-light py-5">
     <div class="container col-8 text-center">
-        <form method="GET" class="search-form justify-content-center pt-3" action="{% url 'blog:post_list' %}">
+        <form method="GET" class="search-form justify-content-center pt-3" action="{% url 'blog:post_content' %}">
             {{ form }}
         </form>
     </div>
