--- a/jawaddev/core/templates/core/components/footer-top.html
+++ b/jawaddev/core/templates/core/components/footer-top.html
@@ -10,7 +10,7 @@
         <h6>Links</h6>
         <ul class="footer-links">
           <li><a href="/"><i class="fa fa-solid fa-caret-right me-2"></i>Portfolio</a></li>
-          <li><a href="{% url 'reading_list' %}"><i class="fa fa-solid fa-caret-right me-2"></i>Reading List</a></li>
+          <li><a href="{% url 'readinglist:book_list' %}"><i class="fa fa-solid fa-caret-right me-2"></i>Reading List</a></li>
           <li><a href="/"><i class="fa fa-solid fa-caret-right me-2"></i>CV</a></li>
           <li><a href="/"><i class="fa fa-solid fa-caret-right me-2"></i>Privacy Policy</a></li>
         </ul>
