--- a/jawaddev/readinglist/templates/readinglist/book_list.html
+++ b/jawaddev/readinglist/templates/readinglist/book_list.html
@@ -1,6 +1,6 @@
 {% extends 'core/base.html' %}
 
-{% block title %}Reading | {{ block.super }}{% endblock title %}
+{% block title %}Reading List | {{ block.super }}{% endblock title %}
 
 {% block content %}
 <section class="cta-section theme-bg-light py-5">
@@ -21,15 +21,19 @@
 </div>
 <section class="project py-3 ps-3">
     <div class="container">
-        <h2 class="project-section-title mb-1">Books</h2>
+        <h2 class="project-section-title mb-1">
+            {% if user.is_authenticated %}
+            <a href="{% url 'readinglist:book_add' %}"><i class="fa fa-solid fa-square-plus me-2"></i></a>
+            {% endif %}
+            Books</h2>
     </div>
 </section>
-{% if book_list %}
-{% for book in book_list %}
+{% if books %}
+{% for book in books %}
 <section class="project px-3 mb-3">
     <div class="container">
       <div class="project-meta media d-md-flex flex-column flex-md-row p-4 theme-bg-light">
-        <img class="mb-3 mb-md-0 me-md-5 rounded d-none d-md-inline-block align-self-start" src={{ book.img_url }} width="260px" alt="J Book">
+        <img class="mb-3 mb-md-0 me-md-5 rounded d-none d-md-inline-block align-self-start" src={{ book.thumbnail_url }} width="260px" alt="J Book">
         <div class="media-body">
           <div class="site-article">
             <ul class="client-meta list-unstyled">
@@ -39,6 +43,12 @@
                   {{ book.title }}
                   </a>
                 </strong>
+                {% if user.is_authenticated %}
+                    <div class="container text-end">
+                    <a href="{% url 'readinglist:book_edit' pk=book.pk %}"><i class="fa fa-solid fa-pen-to-square me-2"></i></a>
+                    <a href="{% url 'readinglist:book_remove' pk=book.pk %}"><i class="fa fa-solid fa-trash-can"></i></a>
+                    </div>
+                {% endif %}
               </li>
               <li class="mb-2 ms-2"><i class="fas fa-tag fa-fw me-2" aria-hidden="true"></i><span>{{ book.tag }}</span></li>
               <li class="mb-2 ms-2"><i class="fas fa-user fa-fw me-2" aria-hidden="true"></i><span>{{ book.author }}</span></li>
@@ -52,6 +62,11 @@
               <p>
                 {{ book.extra }}
               </p>
+              {% if user.is_authenticated %}
+              <div class="container text-end">
+                <a href="{% url 'readinglist:book_kp_add' %}"><i class="fa fa-solid fa-square-plus"></i></a>
+              </div>
+              {% endif %}
               <ul class="list-unstyled">
                 {% for keypoint in book.bookkeypoint_set.all %}
                 <li class="mb-2 ml-2"><i class="fa fa-chevron-right mr-2" aria-hidden="true"></i>
@@ -66,5 +81,7 @@
     </div>
 </section>
 {% endfor %}
+{% else %}
+<div class="project px-3 mb-3">No books found</div>
 {% endif %}
 {% endblock content %}
