--- a/jawaddev/portfolio/templates/portfolio/project_confirm_delete.html
+++ b/jawaddev/portfolio/templates/portfolio/project_confirm_delete.html
@@ -1,6 +1,6 @@
 {% extends "core/base.html" %}
 
-{% block title %}Delete Book | {{ block.super }}{% endblock title %}
+{% block title %}Delete Project | {{block.super}}{% endblock title %}
 
 {% block content %}
 <div class="container d-flex py-5 justify-content-center">
@@ -12,7 +12,7 @@
                 <input type="submit" class="btn btn-danger btn-block mx-auto" value="Delete">
             </div>
             <div class="text-center mb-2">
-                <a href="{% url 'readinglist:book_list' %}" class="btn btn-secondary btn-block">Cancel</a>
+                <a href="{% url 'portfolio:project_list' %}" class="btn btn-secondary btn-block">Cancel</a>
             </div>
         </form>
     </div>
