--- a/jawaddev/portfolio/templates/portfolio/project_list.html
+++ b/jawaddev/portfolio/templates/portfolio/project_list.html
@@ -1,5 +1,6 @@
 {% extends 'core/base.html' %}
 {% load static %}
+{% load rest_framework %}
 
 {% block title %}Portfolio | {{ block.super }}{% endblock title %}
 
@@ -10,7 +11,11 @@
 {% block content %}
 <section class="cta-section theme-bg-light py-5">
 <div class="container text-center col-10">
-    <h2 class="heading">Portfolio</h2>
+    <h2 class="heading">
+        {% if user.is_authenticated %}
+            <a href="{% url 'portfolio:project_add' %}"><i class="fa fa-solid fa-square-plus me-2"></i></a>
+        {% endif %}
+        Portfolio</h2>
     <div class="intro">
         <p>
             Welcome to my portfolio demonstrating skills with Python, Django, Django REST Framework,
@@ -52,9 +57,13 @@
                         <div class="link-mask">
                             <a class="link-mask-link" href="#"></a>
                             <div class="link-mask-text text-center">
-                            <a class="btn btn-secondary" href="#">
-                                <i class="fas fa-arrow-circle-right me-2" aria-hidden="true"></i>{{project.btn_title}}
-                            </a>
+                                <div class="container text-end">
+                                    <a href="{% url 'portfolio:project_edit' pk=project.pk %}"><i class="fa fa-solid fa-pen-to-square me-2"></i></a>
+                                    <a href="{% url 'portfolio:project_remove' pk=project.pk %}"><i class="fa fa-solid fa-trash-can"></i></a>
+                                </div>    
+                                <a class="btn btn-secondary" href="{% url 'api:post-list' %}">
+                                    <i class="fas fa-arrow-circle-right me-2" aria-hidden="true"></i>{{project.btn_title}}
+                                </a>
                             </div>
                         </div>
                         </div>
