--- a/jawaddev/readinglist/templates/readinglist/bookkeypoint_confirm_delete.html
+++ b/jawaddev/readinglist/templates/readinglist/bookkeypoint_confirm_delete.html
@@ -1,6 +1,6 @@
 {% extends "core/base.html" %}
 
-{% block title %}Delete Book | {{ block.super }}{% endblock title %}
+{% block title %}Delete Book Key Point | {{ block.super }}{% endblock title %}
 
 {% block content %}
 <div class="container d-flex py-5 justify-content-center">
