--- a/jawaddev/home/templates/home/components/home-middle.html
+++ b/jawaddev/home/templates/home/components/home-middle.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="col-lg-8">
                   <div class="card-body">
-                    <h5 class="card-title"><a href={{project.link}} class="theme-link">{{project.title}}</a></h5>
+                    <h5 class="card-title"><a href="/" class="theme-link">{{project.title}}</a></h5>
                     <p class="card-text">{{project.desc}}</p>
                   </div>
                 </div>
@@ -21,7 +21,7 @@
               <div class="link-mask">
                 <a class="link-mask-link" href="#"></a>
                 <div class="link-mask-text text-center">
-                  <a class="btn btn-secondary" href="#">
+                  <a class="btn btn-secondary" href={{project.link}} target="_blank">
                     <i class="fas fa-arrow-circle-right me-2" aria-hidden="true"></i>{{project.btn_title}}
                   </a>
                 </div>
