--- a/jawaddev/core/templates/core/components/navbar-middle.html
+++ b/jawaddev/core/templates/core/components/navbar-middle.html
@@ -27,7 +27,11 @@
     </li>
     {% if user.is_authenticated %}
     <li class="nav-item">
-      <a href="{% url "user:logout" %}" class="nav-link"><i class="fa fa-solid fa-right-from-bracket mx-2"></i></i>Logout</a>
+      <form method="post" action="{% url 'user:logout' %}">
+        {% csrf_token %}
+        <button class="nav-link" type="submit"><i class="fa fa-solid fa-right-from-bracket mx-2"></i>Logout</button>
+      </form>
+      <!-- <a href="{% url "user:logout" %}" class="nav-link"><i class="fa fa-solid fa-right-from-bracket mx-2"></i>Logout</a> -->
     </li>
     {% else %}
     <li class="nav-item dropdown">
