--- a/jawaddev/home/templates/home/components/home-top.html
+++ b/jawaddev/home/templates/home/components/home-top.html
@@ -13,14 +13,14 @@
         </p>
       </div>
       <div class="row">
-        <div class="col-4">
+        <div class="col-md-4">
           <a href="#" class="btn btn-primary btn-block me-2 mb-3"><i class="fa fa-briefcase mx-2" aria-hidden="true"></i>Portfolio</a>
         </div>
-        <div class="col-4">
+        <div class="col-md-4">
           <a href="#" class="btn btn-link btn-github btn-block me-2 mb-3" target="_blank" rel="noreferrer"><i class="fa fa-brands fa-github mx-2" aria-hidden="true"></i>Code</a>
         </div>
       </div>
     </div>
-    <img class="profile-image mb-3 mb-lg-0 ml-lg-5 me-md-0" src="https://wl-portfolio.s3.eu-west-2.amazonaws.com/images/python-django.png" alt="Python and Django" />
+    <img class="profile-image mb-3 mb-lg-0 ml-lg-5 me-md-0 mt-3" src="https://wl-portfolio.s3.eu-west-2.amazonaws.com/images/python-django.png" alt="Python and Django" />
   </div>
 </section>
