--- a/jawaddev/expensetracker/templates/expensetracker/expense_profile_verify.html
+++ b/jawaddev/expensetracker/templates/expensetracker/expense_profile_verify.html
@@ -1,4 +1,5 @@
 {% extends "core/base.html" %}
+{% load widget_tweaks %}
 
 {% block title %}
 Expense Tracker Verify | {{block.super}}
@@ -6,10 +7,27 @@ Expense Tracker Verify | {{block.super}}
 
 {% block content %}
 
-<form method="post" action="{% url 'expensetracker:expense_profile_verify' slug=expense_profile.slug %}">
-    {% csrf_token %}
-    {% form.as_p %}
-    <input type="submit" class="btn btn-primary btn-block" value="Verify" />
-</form>
+<section class="expense-tracker-section">
+    <div class="container d-flex shadow py-5 justify-content-center">
+        <div class="auth-wrapper shadow theme-bg-light rounded p-5">
+            <h5 class="auth-heading text-center mb-3">Verify as a Expense User</h5>
+            <form method="POST" id='expense-profile-verify-form'>
+                {% csrf_token %}
+                <div class="mb-3">
+                    {% render_field form.username class+="form-control" placeholder="Username" %}
+                </div>
+                <div class="mb-3">
+                    {% render_field form.question class+="form-control" %}
+                </div>
+                <div class="mb-3">
+                    {% render_field form.answer class+="form-control" placeholder="Answer" %}
+                </div>
+                <div class="text-center mb-2">
+                    <button type="submit" class="btn btn-primary btn-block mx-auto">Verify</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</section>
 
 {% endblock content %}
