--- a/jawaddev/expensetracker/templates/expensetracker/expense_tracker.html
+++ b/jawaddev/expensetracker/templates/expensetracker/expense_tracker.html
@@ -1,5 +1,6 @@
 {% extends "core/base.html" %}
 {% load static %}
+{% load humanize %}
 
 {% block title %}Expense Tracker | {{block.super}}{% endblock title %}
 
@@ -8,56 +9,57 @@
 {% endblock links %}
 
 {% block content %}
+    <section class="expense-tracker-section">
 
-<h2>Expense Tracker</h2>
+            <div class="expense-view-container">
+                <h2 class="py-3">Expense Tracker</h2>
+            <div class="single-col-max-width">
+            <h4>Your Balance</h4>
+            <h1 id="balance">${{profile.balance | intcomma}}</h1>
 
+            <div class="inc-exp-container">
+                <div>
+                    <h4>Income</h4>
+                    <p id="money-plus" class="money plus">+${{profile.income | intcomma}}</p>
+                </div>
+                <div>
+                    <h4>Expense</h4>
+                    <p id="money-minus" class="money minus">-${{profile.expense | intcomma}}</p>
+                </div>
+            </div>
 
-<div class="container">
-    <h4>Your Balance</h4>
-    <h1 id="balance">${{profile.balance}}</h1>
+            <h3>History</h3>
+            <ul id="list" class="list">
+                {% for expense in expenses %}
+                    {% if expense.expense_type == 'Positive' %}
+                        <li class="plus">{{expense.expense_text}} <span>+${{expense.amount | intcomma}}</span></li>
+                    {% else %}
+                    <li class="minus">{{expense.expense_text}} <span>-${{expense.amount | intcomma}}</span></li>    
+                    {% endif %}
+                {% endfor %}
+            </ul>
+            <form method="POST">
+                {% csrf_token %}
+                <div class="form-control">
+                    <label for="text">Text</label>
+                    <input type="text" name="text" id="text" placeholder="Enter text" required>
+                </div>
+                <div class="form-control">
+                    <label for="amount">Amount<br/>
+                    (negative-expense, positve-income)
+                    </label>
+                    <input type="number" name="amount" id="amount" placeholder="Enter amount" required>
+                </div>
 
-    <div class="inc-exp-container">
-        <div>
-            <h4>Income</h4>
-            <p id="money-plus" class="money plus">+${{profile.income}}</p>
+                <div class="form-control">
+                    <label for="text">Type</label>
+                    <select name="expense_type" class="form-control" required>
+                        <option value="Positive">Positive</option>
+                        <option value="Negative">Negative</option>
+                    </select>
+                </div>
+                <button class="btn" type="submit">Add transaction</button>
+            </form>
         </div>
-        <div>
-            <h4>Expense</h4>
-            <p id="money-minus" class="money minus">-${{profile.expense}}</p>
-        </div>
-    </div>
-
-    <h3>History</h3>
-    <ul id="list" class="list">
-        {% for expense in expenses %}
-            {% if expense.expense_type == 'Positive' %}
-                <li class="plus">{{expense.expense_text}} <span>+${{expense.amount}}</span></li>
-            {% else %}
-            <li class="minus">{{expense.expense_text}} <span>+${{expense.amount}}</span></li>    
-            {% endif %}
-        {% endfor %}
-    </ul>
-    <form method="POST">
-        {% csrf_token %}
-        <div class="form-control">
-            <label for="text">Text</label>
-            <input type="text" name="text" id="text" placeholder="Enter text" required>
-        </div>
-        <div class="form-control">
-            <label for="amount">Amount<br/>
-            (negative-expense, positve-income)
-            </label>
-            <input type="number" name="amount" id="amount" placeholder="Enter amount" required>
-        </div>
-
-        <div class="form-control">
-            <label for="text">Type</label>
-            <select name="expense_type" class="form-control" required>
-                <option value="Positive">Positive</option>
-                <option value="Negative">Negative</option>
-            </select>
-        </div>
-        <button class="btn" type="submit">Add transaction</button>
-    </form>
-
+    </section>
 {% endblock content %}
