--- a/jawaddev/home/templates/home/cv.html
+++ b/jawaddev/home/templates/home/cv.html
@@ -132,7 +132,7 @@
                                 Professional Development
                             </h3>
                             <div class="item-content">
-                                Enjoys a continuous programme of self-study for professional and personal development principally targeted towards skills in software engineering, web development, and data science. You can <a class="theme-link" href="{% url "reading_list" %}" target="_blank">review the programming books I have studied</a> here.
+                                Enjoys a continuous programme of self-study for professional and personal development principally targeted towards skills in software engineering, web development, and data science. You can <a class="theme-link" href="{% url "readinglist:book_list" %}" target="_blank">review the programming books I have studied</a> here.
                             </div>
                         </section>
                     </div>
