--- a/jawaddev/core/templates/core/components/navbar-middle.html
+++ b/jawaddev/core/templates/core/components/navbar-middle.html
@@ -23,7 +23,7 @@
       <a href="{% url "contact" %}" class="nav-link"><i class="fa fa-envelope mx-2"></i>Contact</a>
     </li>
     <li class="nav-item">
-      <a href="/" class="nav-link"><i class="fa fa-info-circle mx-2"></i>About me</a>
+      <a href="{% url 'about' %}" class="nav-link"><i class="fa fa-info-circle mx-2"></i>About me</a>
     </li>
     {% if user.is_authenticated %}
     <li class="nav-item">
