--- a/jawaddev/pdftodocx/templates/pdftodocx/pdftodocx.html
+++ b/jawaddev/pdftodocx/templates/pdftodocx/pdftodocx.html
@@ -16,21 +16,25 @@
             background-color: #dde0e3;
             cursor: pointer;
           }
+          .btn-danger {
+            height: 80px;
+            width: 320px
+          }
     </style>
-
 {% endblock links %}
 
 {% block content %}
     <section class="pdftodocx-section">
-        <div class="container text-center py-5">
+        <div class="container text-center py-5 single-col-max-width">
             <h2>PDF to WORD</h2>
-            <h6>Convert your PDF to WORD documents with incredible accuracy.</h6>
             {% if convert.ready %}
+            <h6>Your File is Ready!</h6>
             <form action="{% url "pdftodocx:downloadDocx" fileName=convert.name %}">
                 {% csrf_token %}
-                <button type="submit" class="btn btn-danger btn-lg">Download</button>
+                <button type="submit" class="btn btn-danger fs-3"><i class="fa fa-solid fa-download me-3"></i>Download</button>
             </form>
             {% else %}
+            <h6>Convert your PDF to WORD documents with incredible accuracy.</h6>
             <form id="form" method="POST" action="{% url 'pdftodocx:pdftodocxconverter' %}" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="input-group custom-file-btn">
@@ -38,9 +42,9 @@
                 <input type="file" class="form-control" id="inputGroupFile" name="selectedFile" accept="application/pdf" required />
                 </div>
             </form>
+            {% endif %}
         </div>
     </section>
-    {% endif %}
 {% endblock content %}
 
 {% block scriptlinks %}
